# layer-values-monitor

./: .gitignore  README.md  config.toml  config.toml.example  env.example  justfile  lvm.service.example  notes.py  pyproject.toml  test_catchup.py
.github/: ruff.yml  test.yml
.github/workflows/: release.yml  ruff.yml  test.yml
chains/: layer.json
src/layer_values_monitor/: __init__.py  catchup.py  config_watcher.py  constants.py  custom_feeds.py  custom_types.py  discord.py  dispute.py  evm_call.py  evm_connections.py  logger.py  main.py  monitor.py  propose_dispute.py  saga_contract.py  telliot_feeds.py  threshold_config.py  trb_bridge.py  types_metric.py  utils.py
tests/: conftest.py  test_agg_reports_saga.py  test_catchup.py  test_catchup_curl.py  test_config_watcher.py  test_custom_feeds.py  test_discord_msg.py  test_double_check_dispute.py  test_get_source_from_data.py  test_inspect_reports.py  test_is_disputable.py  test_main_rpc_validation.py  test_messages.json  test_metric_pytest.py  test_multi_query_logging.py  test_power_thresholds.py  test_process_msg.py  test_queue_handler.py  test_rpc_validation.py  test_saga_contract.py  test_saga_edge_cases.py  test_saga_integration.py  test_trb_bridge.py  test_websocket_listener.py
tests/encoding_contract/: tellor_encoding.sol
tests/test_contracts/interfaces/: ITellorDataBank.sol
tests/test_pause_contracts/: BTCAdaptor.sol  GuardedPausable.sol  readme.md
tests/test_pause_contracts/interfaces/: LiquityV2OracleAggregatorV3Interface.sol
