[project]
name = "layer-values-monitor"
version = "0.1.4"
description = "Layer values monitor"
readme = "README.md"
authors = [
    { name = "Tellor Development Community" }
]
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "discordwebhook>=1.0.3",
    "eth-abi==5.2.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "telliot-feeds>=0.2.2",
    "websockets==13.1",
]
[project.scripts]
layer-values-monitor = "layer_values_monitor.main:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

# In pyproject.toml
[tool.ruff]
# Target Python version
target-version = "py312"

# Line length
line-length = 125

[tool.ruff.lint]
# Enable specific linting rules
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "ANN",  # flake8-annotations
    "B",    # flake8-bugbear
    "D",    # pydocstyle
    "C4",   # flake8-comprehensions
]
per-file-ignores = { "tests/*" = ["ANN", "D"] }
# Ignore specific rules
ignore = [
    "D203",
    "D213",
    "ANN401",
    "N806",
    "ANN002",
    "ANN003"
]

[dependency-groups]
dev = [
    "pytest-asyncio>=0.25.3",
    "pytest>=8.3.5",
]
[tool.ruff.lint.isort]
relative-imports-order = "closest-to-furthest"
section-order = ["future", "standard-library", "first-party", "local-folder", "third-party"]
